force-app/main/default/objects/CLQ_Rule__c/CLQ_Rule__c.object-meta.xml
<CustomObject>
    <label>Rule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>