force-app/main/default/objects/CLQ_Rule__c/fields/CLQ_Description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>