force-app/main/default/objects/CLQ_Rule__c/fields/CLQ_Description_Text__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Description_Text__c</fullName>
    <inlineHelpText>OAC Rule Language</inlineHelpText>
    <label>Administrative Code</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>