force-app/main/default/objects/CLQ_Rule__c/fields/CLQ_Indicator_number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Indicator_number__c</fullName>
    <label>Indicator number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>