force-app/main/default/objects/CLQ_Rule__c/fields/CLQ_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Long_Name__c</fullName>
    <label>Long Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>