force-app/main/default/objects/CLQ_Rule__c/fields/CLQ_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Type__c</fullName>
    <label>Program Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff Files (FT)</fullName>
            </value>
            <value>
                <fullName>Written Policies &amp; Procedures(FT)</fullName>
            </value>
            <value>
                <fullName>Indoor-Outdoor Space(FT)</fullName>
            </value>
            <value>
                <fullName>Health &amp; Safety (FT)</fullName>
            </value>
            <value>
                <fullName>Safe &amp; Sanitary Envt (RST)</fullName>
            </value>
            <value>
                <fullName>Program Info(FT)</fullName>
            </value>
            <value>
                <fullName>Children&apos;s Files (FT)</fullName>
            </value>
            <value>
                <fullName>Postings &amp; Equipment (RST)</fullName>
            </value>
            <value>
                <fullName>Ratio Info (FT)</fullName>
            </value>
            <value>
                <fullName>Observations (RST)</fullName>
            </value>
            <value>
                <fullName>License &amp; Approvals(FT)</fullName>
            </value>
            <value>
                <fullName>Diapering &amp; InfantCare(FT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>