force-app/main/default/objects/CLQ_Rule__c/fields/CLQ_Rule_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rule_Expiration_Date__c</fullName>
    <label>Rule Expiration Date</label>
    <type>Date</type>
</CustomField>