force-app/main/default/objects/CLQ_Rule__c/fields/CLQ_Rule_Language__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rule_Language__c</fullName>
    <label>Rule Language (For Report)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>