force-app/main/default/objects/CLQ_Rule__c/fields/CLQ_Rule_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rule_Number__c</fullName>
    <label>Rule Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>