force-app/main/default/objects/CLQ_Rule__c/fields/CLQ_Rule_Summary__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rule_Summary__c</fullName>
    <label>Rule Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>