force-app/main/default/objects/CLQ_Rule__c/fields/CLQ_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Short_Name__c</fullName>
    <label>Short Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>