force-app/main/default/objects/CLQ_Rule__c/fields/Rule_Language__c.field-meta.xml
<CustomField>
    <fullName>Rule_Language__c</fullName>
    <label>Rule Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>