force-app/main/default/objects/CLQ_Rule__c/listViews/All_Informatica.listView-meta.xml
<ListView>
    <fullName>All_Informatica</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CLQ_Short_Name__c</columns>
    <columns>CLQ_Description_Text__c</columns>
    <columns>CLQ_Program_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Informatica User</value>
    </filters>
    <label>All_Informatica</label>
</ListView>